# Curso_AyPSE_ESE

./: README.md
documentación/: compilación.md  depuración.md  instalación.md  proyecto_nuevo.md  repositorio.md  repositorio2.md
documentación/proyecto_driver/: proyecto.md
firmware/: AyPSE.code-workspace  README.md
firmware/apps/0_blinking/: CMakeLists.txt  Doxyfile  sdkconfig  sdkconfig.old
firmware/apps/0_blinking/main/: CMakeLists.txt
firmware/apps/0_test_runner/: CMakeLists.txt  README.md
firmware/apps/0_test_runner/main/: CMakeLists.txt  test_runner.c
firmware/apps/0_test_runner/test/: CMakeLists.txt
firmware/apps/0_test_runner/test/drivers_hal/: test_gpio_hal.c
firmware/apps/proyecto_imu/: sdkconfig
firmware/apps/proyecto_imu/main/: CMakeLists.txt
firmware/apps/x_template/: CMakeLists.txt  Doxyfile
firmware/apps/x_template/main/: CMakeLists.txt
firmware/board_support/: CMakeLists.txt
firmware/board_support/inc/: bmi270.h  bmi270_bus.h  bmi270_config.h  bmi270_i2c_bus.h  board_config.h  led.h  template_bsp.h
firmware/board_support/src/: bmi270.c  bmi270_config.c  bmi270_i2c_bus.c  led.c  template_bsp.c
firmware/board_support/test/: CMakeLists.txt  test_bmi270.c  test_bmi270_i2c_bus.c  test_led.c
firmware/drivers_hal/: CMakeLists.txt
firmware/drivers_hal/inc/: gpio_hal.h  hal_delay.h  i2c_hal.h  template_hal.h
firmware/drivers_hal/src/: hal_delay.c  i2c_hal.c
firmware/drivers_hal/test/: CMakeLists.txt  test_gpio_hal.c  test_i2c_hal.c
firmware/middleware/: CMakeLists.txt
firmware/middleware/inc/: animation.h
firmware/test_app/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
firmware/test_app/main/: CMakeLists.txt  test_app_main.c  test_helpers.h
